--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\Python\\Python38-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\Azam\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
